Bug 90127 - START CENTER: Breeze icons appearing in start center when Breeze icon theme not set
Summary: START CENTER: Breeze icons appearing in start center when Breeze icon theme n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: notBibisectable, regression
: 79147 91510 (view as bug list)
Depends on:
Blocks: mab5.0
  Show dependency treegraph
 
Reported: 2015-03-20 13:05 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:20 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-03-20 13:05:43 UTC
If you start LO in the start center, Breeze icons will appear on the buttons but if you open a document and close it to return back to the start center, the breeze icons have disappeared.

Version: 4.5.0.0.alpha0+
Build ID: 6ef1cb0c573c479b23866184b819be6226755179
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-19_00:35:49
Comment 1 Yousuf Philips (jay) (retired) 2015-03-20 13:06:29 UTC
Confirming this as qubit and kendy have already mentioned the same problem.
Comment 2 Adolfo Jayme Barrientos 2015-03-22 08:40:28 UTC
Seems similar to bug 79147.
Comment 3 Yousuf Philips (jay) (retired) 2015-03-22 12:31:08 UTC
(In reply to Adolfo Jayme from comment #2)
> Seems similar to bug 79147.

Yep seems similar. I believe it may have to do with breeze getting packaged before galaxy during the build process, but i could be wrong. :D
Comment 4 Matthew Francis 2015-03-24 09:42:20 UTC
I can reproduce only precisely the opposite problem. If I:

- Set the icon theme to Breeze
- Restart
- Create a document in the Start Centre
- Close the document back to the Start Centre,

the first time through the Start Centre the icons are Tango, the second time they're Breeze
Comment 5 Matthew Francis 2015-03-25 14:21:05 UTC
The point at which breeze icons start appearing in the start centre *after* closing the first document is the below date:
 7a2f692208dc4c4ccf27a012d58ee8002f50ce55 is the first bad commit
commit 7a2f692208dc4c4ccf27a012d58ee8002f50ce55
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Thu Mar 19 05:48:49 2015 +0100

    2015-03-19: source-hash-bdad6d0fe492a2334cb27ef54fc5d1cba17d1970


Looking at the commits in that range, this is almost certainly irrelevant, and just a side effect of more Breeze icons having been added at that point. Whatever the real bug is, is elswhere.


commit 2e46594e7f31a7124defe6a05a3e4690a5bfa012
Author: Yousuf Philips <philipz85@hotmail.com>
Date:   Wed Mar 18 03:18:05 2015 +0400

    tdf#87234 - Addition of many large and small breeze icons

commit ba1d0181c2e5e5562efa4fdeaf7b229b6a27907f
Author: Andreas Kainz <kainz.a@gmail.com>
Date:   Wed Mar 18 17:47:27 2015 +0100

    breeze: Added more icons, updated links.txt.

commit 032ce79c49af10371c773b87eda470307861e18c
Author: Jan Holesovsky <kendy@collabora.com>
Date:   Wed Mar 18 19:25:54 2015 +0100

    breeze: Revert the links.txt change.
Comment 6 Yousuf Philips (jay) (retired) 2015-03-25 17:05:37 UTC
Yes it happened the day the breeze icons went into the repo, but the reason why it is acting in this manager isnt related to just the addition of the icons into the repo, it must have some other issue. I believe it maybe due to the restructuring of the way icons are managed in LO after 4.5 was branched. I believe kendy did that work.
Comment 7 Robinson Tryon (qubit) 2015-03-31 16:16:03 UTC
(In reply to Matthew Francis from comment #5)
> Looking at the commits in that range, this is almost certainly irrelevant,
> and just a side effect of more Breeze icons having been added at that point.
> Whatever the real bug is, is elswhere.

Sounds like:
Whiteboard -> notBibisectable
(correct me if I'm mistaken!)
Comment 8 V Stuart Foote 2015-04-02 14:25:20 UTC
Whichever the source of the issue, we now have a branding issue in that the designated LO Tango based branding icons should probably never be substituted onto the StartCenter. 

They are our product branding, and should probably remain the design default despite a users UI selection for a different font set.

To protect branding, guess we need to provide an option, probably in Expert Config, to also follow the user assigned font choice in StartCenter.
Comment 9 V Stuart Foote 2015-04-02 14:28:00 UTC
(In reply to V Stuart Foote from comment #8)

s/font set/icon set/g
Comment 10 Pedro 2015-05-01 17:10:41 UTC
This probably helps: 

While copying the Breeze theme to use in LibO 4.4, I found out that the theme used on first launch is the first (alphabetic) theme.

Because images_breeze.zip is the first (alphabetic) theme it loaded immediately on start up with 4.4

This means that if you rename any theme to images_alpha.zip it will be loaded on the first use.

Again, this means that there is some duplicated code that has a different set of rules.
Comment 11 Yousuf Philips (jay) (retired) 2015-05-01 21:30:33 UTC
@Pedro: I had thought that was the case as well. :D
Comment 12 Adolfo Jayme Barrientos 2015-05-23 11:12:57 UTC
*** Bug 91510 has been marked as a duplicate of this bug. ***
Comment 13 tommy27 2015-05-24 12:42:09 UTC
issue affects MacOS and Window too and persists in recent 5.1 alpha builds
Comment 14 Commit Notification 2015-05-25 09:47:47 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4163bde70568d6d5dd7144293484f797e8df9e63

related tdf#90127: Simplify setting of the 'auto' icon theme.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2015-05-25 09:47:52 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55c6bd93e9c02b2160b82c0d489d05ba31a0f13c

tdf#90127: Read icon theme from the config when called too early.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2015-05-25 09:49:13 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5397a8ad5306a670355824f703da702f7401524a&h=libreoffice-5-0

tdf#90127: Read icon theme from the config when called too early.

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Jan Holesovsky 2015-05-25 09:50:02 UTC
Fixed now.
Comment 18 Jan Holesovsky 2015-06-12 15:49:26 UTC
*** Bug 79147 has been marked as a duplicate of this bug. ***
Comment 19 Robinson Tryon (qubit) 2015-12-17 10:58:59 UTC Comment hidden (obsolete)