related tdf#90127: Simplify setting of the 'auto' icon theme.

Change-Id: I9aedfd0b7943517b5444195b63140132dd728d57